--- a/eTools Ultimate/Views/Pages/Motion/MotionPage.xaml
+++ b/eTools Ultimate/Views/Pages/Motion/MotionPage.xaml
@@ -69,26 +69,6 @@
                             Text="{Binding Path=DwId, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                     </Grid>
 
-                    <!--  Motion ID Key  -->
-                    <Grid Margin="0,0,15,20" Style="{StaticResource FormFieldStyle}">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                        </Grid.RowDefinitions>
-                        <StackPanel Grid.Row="0" Orientation="Horizontal">
-                            <TextBlock Style="{StaticResource FieldLabelStyle}" Text="Motion ID Key" />
-                            <ui:SymbolIcon Style="{StaticResource InfoIconStyle}" Symbol="Info20">
-                                <ui:SymbolIcon.ToolTip>
-                                    <ToolTip Content="Internal key identifier for the motion" />
-                                </ui:SymbolIcon.ToolTip>
-                            </ui:SymbolIcon>
-                        </StackPanel>
-                        <TextBox
-                            x:Name="MotionIdKeyTextBox"
-                            Grid.Row="1"
-                            Text="{Binding Path=DwMotion, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                    </Grid>
-
                     <!--  Motion Icon  -->
                     <Grid Margin="0,0,15,20" Style="{StaticResource FormFieldStyle}">
                         <Grid.RowDefinitions>
@@ -131,26 +111,6 @@
                                     Source="{Binding Icon}" />
                             </Border>
                         </Grid>
-                    </Grid>
-
-                    <!--  Play ID Key  -->
-                    <Grid Margin="0,0,15,20" Style="{StaticResource FormFieldStyle}">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                        </Grid.RowDefinitions>
-                        <StackPanel Grid.Row="0" Orientation="Horizontal">
-                            <TextBlock Style="{StaticResource FieldLabelStyle}" Text="Play ID Key" />
-                            <ui:SymbolIcon Style="{StaticResource InfoIconStyle}" Symbol="Info20">
-                                <ui:SymbolIcon.ToolTip>
-                                    <ToolTip Content="Key used to trigger the motion animation" />
-                                </ui:SymbolIcon.ToolTip>
-                            </ui:SymbolIcon>
-                        </StackPanel>
-                        <TextBox
-                            x:Name="PlayIdKeyTextBox"
-                            Grid.Row="1"
-                            Text="{Binding Path=DwPlay, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                     </Grid>
 
                     <!--  InGame Name  -->
@@ -213,8 +173,8 @@
                     Width="32"
                     Height="32"
                     Margin="0,0,8,0"
-                    Background="{DynamicResource CardBackgroundFillColorDefaultBrush}"
-                    BorderBrush="{DynamicResource ControlStrokeColorDefaultBrush}"
+                    Background="#2D2D30"
+                    BorderBrush="#3F3F46"
                     BorderThickness="1">
                     <Image
                         Margin="2"
@@ -224,11 +184,11 @@
                 <StackPanel Grid.Column="1" VerticalAlignment="Center">
                     <TextBlock
                         FontWeight="SemiBold"
-                        Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+                        Foreground="White"
                         Text="{Binding Name}" />
                     <TextBlock
                         FontSize="12"
-                        Foreground="{DynamicResource TextFillColorSecondaryBrush}"
+                        Foreground="#B0B0B0"
                         Text="{Binding Identifier}" />
                 </StackPanel>
             </Grid>
@@ -258,8 +218,8 @@
                 <Border
                     Grid.Row="0"
                     Margin="0,0,10,0"
-                    Background="{DynamicResource CardBackgroundFillColorDefaultBrush}"
-                    BorderBrush="{DynamicResource ControlStrokeColorDefaultBrush}"
+                    Background="#2D2D30"
+                    BorderBrush="#3F3F46"
                     BorderThickness="1,1,1,0">
                     <ui:TextBox
                         Margin="10,10,10,10"
@@ -273,8 +233,8 @@
                 <Border
                     Grid.Row="1"
                     Margin="0,0,10,0"
-                    Background="{DynamicResource CardBackgroundFillColorDefaultBrush}"
-                    BorderBrush="{DynamicResource ControlStrokeColorDefaultBrush}"
+                    Background="#2D2D30"
+                    BorderBrush="#3F3F46"
                     BorderThickness="1,0,1,1">
                     <ListView
                         x:Name="MotionsListView"
@@ -287,14 +247,14 @@
                         <ListView.ItemContainerStyle>
                             <Style TargetType="ListViewItem">
                                 <Setter Property="Background" Value="Transparent" />
-                                <Setter Property="BorderBrush" Value="{DynamicResource ControlStrokeColorDefaultBrush}" />
+                                <Setter Property="BorderBrush" Value="#3F3F46" />
                                 <Style.Triggers>
                                     <Trigger Property="IsMouseOver" Value="True">
-                                        <Setter Property="Background" Value="{DynamicResource ControlFillColorSecondaryBrush}" />
+                                        <Setter Property="Background" Value="#404040" />
                                     </Trigger>
                                     <Trigger Property="IsSelected" Value="True">
-                                        <Setter Property="Background" Value="{DynamicResource ControlFillColorDefaultBrush}" />
-                                        <Setter Property="Foreground" Value="{DynamicResource TextFillColorPrimaryBrush}" />
+                                        <Setter Property="Background" Value="#2D2D30" />
+                                        <Setter Property="Foreground" Value="White" />
                                     </Trigger>
                                 </Style.Triggers>
                             </Style>
@@ -318,17 +278,17 @@
                                     Width="2"
                                     Height="20"
                                     Margin="0,2,0,2"
-                                    Fill="{DynamicResource TextFillColorSecondaryBrush}" />
+                                    Fill="#B0B0B0" />
                                 <Rectangle
                                     Width="2"
                                     Height="20"
                                     Margin="0,2,0,2"
-                                    Fill="{DynamicResource TextFillColorSecondaryBrush}" />
+                                    Fill="#B0B0B0" />
                                 <Rectangle
                                     Width="2"
                                     Height="20"
                                     Margin="0,2,0,2"
-                                    Fill="{DynamicResource TextFillColorSecondaryBrush}" />
+                                    Fill="#B0B0B0" />
                             </StackPanel>
                         </Grid>
                     </ControlTemplate>
@@ -367,10 +327,12 @@
                         <ui:Button
                             x:Name="AddButton"
                             Margin="0,0,10,0"
+                            HorizontalAlignment="Left"
                             Appearance="Primary"
                             Background="#2F70AF"
-                            Click="AddButton_Click"
-                            Content="Add" />
+                            Click="AddButton_Click">
+                            <TextBlock Text="Add" Foreground="White" />
+                        </ui:Button>
                         <ui:Button
                             x:Name="DeleteButton"
                             Background="#FD292F"
@@ -381,9 +343,87 @@
                     <!--  Form  -->
                     <StackPanel Margin="20">
                         <ContentControl Content="{Binding ViewModel.MotionsView}" ContentTemplate="{StaticResource MotionDetailsSectionTemplate}" />
+                        
+                        <!--  3D Model Preview Section  -->
+                        <StackPanel Margin="0,20,0,0">
+                            <TextBlock Style="{StaticResource SectionHeaderStyle}" Text="Model Preview" />
+                            
+                            <!--  Preview Container  -->
+                            <Grid Margin="0,0,0,15" HorizontalAlignment="Left">
+                                <!--  3D Model Preview  -->
+                                <Grid Width="500">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="250" />
+                                        <RowDefinition Height="Auto" />
+                                    </Grid.RowDefinitions>
+                                    <Border
+                                        Grid.Row="0"
+                                        Background="#2D2D30"
+                                        BorderBrush="#3F3F46"
+                                        BorderThickness="1"
+                                        CornerRadius="4">
+                                        <Grid>
+                                            <Image
+                                                x:Name="DxImage"
+                                                HorizontalAlignment="Center"
+                                                VerticalAlignment="Center"
+                                                Stretch="UniformToFill" />
+
+                                            <StackPanel
+                                                Margin="0,5,5,0"
+                                                HorizontalAlignment="Right"
+                                                VerticalAlignment="Top"
+                                                Panel.ZIndex="1"
+                                                Orientation="Horizontal">
+                                                <ui:Button Margin="0,0,5,0">
+                                                    <ui:Button.Style>
+                                                        <Style BasedOn="{StaticResource {x:Type Button}}" TargetType="Button">
+                                                            <Style.Triggers>
+                                                                <DataTrigger Binding="{Binding DataContext.Auto3DRendering, RelativeSource={RelativeSource AncestorType=Page}}" Value="False">
+                                                                    <Setter Property="ToolTip" Value="Play selected motion" />
+                                                                    <Setter Property="Command" Value="{Binding PlayMotionCommand, Mode=OneWay}" />
+                                                                </DataTrigger>
+                                                                <DataTrigger Binding="{Binding DataContext.Auto3DRendering, RelativeSource={RelativeSource AncestorType=Page}}" Value="True">
+                                                                    <Setter Property="ToolTip" Value="Stop current motion" />
+                                                                    <Setter Property="Command" Value="{Binding StopMotionCommand, Mode=OneWay}" />
+                                                                </DataTrigger>
+                                                            </Style.Triggers>
+                                                        </Style>
+                                                    </ui:Button.Style>
+                                                    <ui:SymbolIcon>
+                                                        <ui:SymbolIcon.Style>
+                                                            <Style TargetType="ui:SymbolIcon">
+                                                                <Style.Triggers>
+                                                                    <DataTrigger Binding="{Binding DataContext.Auto3DRendering, RelativeSource={RelativeSource AncestorType=Page}}" Value="False">
+                                                                        <Setter Property="Symbol" Value="Play24" />
+                                                                    </DataTrigger>
+                                                                    <DataTrigger Binding="{Binding DataContext.Auto3DRendering, RelativeSource={RelativeSource AncestorType=Page}}" Value="True">
+                                                                        <Setter Property="Symbol" Value="Stop24" />
+                                                                    </DataTrigger>
+                                                                </Style.Triggers>
+                                                            </Style>
+                                                        </ui:SymbolIcon.Style>
+                                                    </ui:SymbolIcon>
+                                                </ui:Button>
+                                                <ui:Button Command="{Binding ShowReferenceModelContentDialogCommand}" ToolTip="Reference Model">
+                                                    <ui:SymbolIcon Symbol="ImageReflection24" />
+                                                </ui:Button>
+                                            </StackPanel>
+                                        </Grid>
+                                    </Border>
+                                    
+                                    <!--  Loop Mode Dropdown  -->
+                                    <ComboBox Grid.Row="1" Margin="0,10,0,0" SelectedIndex="0">
+                                        <ComboBoxItem Content="Loop" />
+                                        <ComboBoxItem Content="One Time Keep" />
+                                        <ComboBoxItem Content="One Time" />
+                                    </ComboBox>
+                                </Grid>
+                            </Grid>
+                        </StackPanel>
                     </StackPanel>
                 </Grid>
             </ScrollViewer>
         </Grid>
     </Grid>
-</Page> 
+</Page>
